# pinwheel

./: Cargo.toml  README.md
.github/workflows/: macos-build.yml  windows-build.yml
assets/: cache.json
resources/: default.csv  default_titles.csv
src/: main.rs  tracker.rs  utils.rs
