[package]
name = "pinwheel"
version = "0.1.0"
edition = "2021"

[dependencies]
freya = "0.2.2"
dioxus = { version = "0.6.3", features = ["macro", "hooks"], default-features = false }
csv = "1.3"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
clippers = "0.1.0"
rfd = "0.15.2"

